Click time-series store & API (SPEC-0021) (#282)
